# arduino

./: .gitignore  .pre-commit-config.yaml  CMakeListsUser.txt  LICENSE  README.md  platformio.ini  pyproject.toml
.github/workflows/: test-build.yaml
include/: README.md  config.h
lib/: README.md
src/: main.cpp
test/: test_main.cpp
