[tool.poetry]
name = "arduino"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
platformio = "^6.1.5"
taskipy = "^1.10.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.taskipy.tasks]
init = "pre-commit install && platformio -c clion init"
build = "platformio run"
debug = "platformio debug"
test = "platformio test"
upload = "platformio run --target upload"
clean = "platformio run --target clean"
lint = "pre-commit run --all-files"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
